# ai-enablement-proof

./: .env.example  .gitignore  CLAUDE.md  PROJECT_PLAN.md  README.md  generate_report.py  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
docs/: audit-trail-spec.md  autonomy-ladder.md  gate-specifications.md
docs/alert-playbooks/: playbook.md
docs/model-cards/: lgb_baseline.md
enablement/: deployment-gate-checklist.md  executive-onepager.md  maturity-rubric.md  operating-model.md  value-scorecard.md
figures/: generate.py
src/agent/: loop.py  test_agent.py
src/api/: app.py
src/forecast/: baseline.py  features.py  test_forecast.py
src/governance/: __init__.py  audit.py  autonomy.py  gates.py  test_no_L5.py
src/ingest/: cli.py  eia930.py  noaa.py  store.py  test_point_in_time.py
src/stress/: backtest.py  backtest_real.py  gsi.py  test_backtest.py  test_gsi.py
