[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-enablement-proof"
version = "0.1.0"
description = "A governed autonomous agent for grid reliability across the U.S. power system"
requires-python = ">=3.11"
authors = [{name = "Alan Mossinger"}]
license = {text = "MIT"}

dependencies = [
    "duckdb>=1.0",
    "httpx>=0.27",
    "lightgbm>=4.0",
    "pandas>=2.1",
    "plotly>=5.18",
    "matplotlib>=3.8",
    "fastapi>=0.111",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["src"]
pythonpath = ["."]
